--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,24 +1,29 @@
 <p id="notice"><%= notice %></p>
-
 <h1>Clients</h1>
 
-<table>
+<table class='table table-hover'>
   <thead>
     <tr>
-      <th colspan="3"></th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Date of birth</th>
+      <th>Medical Condition</th>
+      <th>Actions</th>
     </tr>
   </thead>
 
   <tbody>
     <% @clients.each do |client| %>
-      <p><%= client.first_name %></p>
-      <p><%= client.last_name %></p>
-      <p><%= client.date_of_birth %></p>
-      <p><%= client.medical_condition %></p>
       <tr>
-        <td class=''><%= link_to 'Show', client %></td>
-        <td><%= link_to 'Edit', edit_client_path(client) %></td>
-        <td><%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= client.first_name %></td>
+        <td><%= client.last_name %></td>
+        <td><%= format_date(client.date_of_birth) %></td>
+        <td><%= client.medical_condition %></td>
+        <td>
+          <%= link_to 'Show', client_path(client) %>
+          <%= link_to 'Edit', edit_client_path(client) %>
+          <%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
