--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Client</h1>
+<h1 class='text-center'>New Client</h1>
 
 <%= render 'form', client: @client %>
-
-<%= link_to 'Back', clients_path %>
