Added more styling and address fields to forms and show.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,6 +7,7 @@
 @import 'utilities/bem_mixins';
 @import 'utilities/variables';
 
+@import 'vendor/font-awesome';
 @import 'vendor/frow';
 
 @import 'base/bootstrap_overwrites';
