--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -2,5 +2,11 @@
 
 <%= render 'form', client: @client %>
 
-<%= link_to 'Show', @client %> |
-<%= link_to 'Back', clients_path %>
+<div class="col-sm-4 col-sm-offset-4">
+  <%= link_to 'Show', @client %> |
+  <%= link_to 'Back', clients_path %>
+</div>
+
+<div class="col-md-12 content-wrap">
+
+</div>
