--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,33 +1,7 @@
 <p id="notice"><%= notice %></p>
 <h1>Clients</h1>
 
-<table class='table table-striped'>
-  <thead>
-    <tr>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Date of birth</th>
-      <th>Medical Condition</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @clients.each do |client| %>
-      <tr>
-        <td><%= client.first_name %></td>
-        <td><%= client.last_name %></td>
-        <td><%= format_date(client.date_of_birth) %></td>
-        <td><%= client.medical_condition %></td>
-        <td>
-          <%= link_to '', client_path(client), class: 'fa fa-button fa-search' %>
-          <%= link_to '', edit_client_path(client), class: 'fa fa-button fa-pencil' %>
-          <%= link_to '', client, method: :delete, class: 'fa fa-button fa-trash', data: { confirm: 'Are you sure?' } %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= react_component 'ClientsIndex', clients: @clients %>
 
 <br>
 
