Messing around with styles.

--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -2,6 +2,10 @@ body {
   color: $charcoal;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
 h5 {
   text-transform: uppercase;
   margin-bottom: 20px;
